# motion-instrument

./: CMakeLists.txt  README.md
plugins/AUv3/: IMPLEMENTATION_SUMMARY.md  README.md  build.sh
plugins/AUv3/KaneMarcoPluginApp/: AppDelegate.swift  ViewController.swift
plugins/AUv3/KaneMarcoPluginExtension/: AudioUnit.swift  AudioUnitViewController.swift  Info.plist  ParameterBridge.swift
plugins/AUv3/SharedDSP/: CMakeLists.txt  KaneMarcoDSP.cpp  KaneMarcoDSP.h
plugins/au/Contents/: Info.plist
plugins/dsp/: UPFS_IMPLEMENTATION_REPORT.md  test_upfs_preset.cpp
plugins/dsp/docs/: ADVANCED_PHYSICS_IMPLEMENTATION.md
plugins/dsp/docs/plans/: GIANT_INSTRUMENT_IMPLEMENTATION.md  KANE_MARCO_AETHER_IMPLEMENTATION.md  KANE_MARCO_AETHER_PRESETS.md  KANE_MARCO_AETHER_PRESET_LOADING_GUIDE.md  KANE_MARCO_AETHER_RESEARCH.md  KANE_MARCO_AETHER_STRING_RESEARCH.md  KANE_MARCO_AETHER_WEEK1_PROGRESS.md  KANE_MARCO_AETHER_WEEK5_COMPLETE.md  KANE_MARCO_AETHER_WEEK_4_SUMMARY.md  KANE_MARCO_AETHER_WEEK_5_COMPLETION_REPORT.md  KANE_MARCO_FAMILY_FINAL_COMPLETION_REPORT.md  (+10 more)
plugins/dsp/presets/: aether_giant_instrument_ir.json
plugins/standalone/Contents/: Info.plist
plugins/vst/Contents/: Info.plist
presets/presets/Breath/: Full Breath.xml  Medium Breath.xml  Soft Breath.xml
presets/presets/Character/: Airy.xml  Focused.xml  Open.xml
presets/presets/FX/: Evanescent.xml  Punchy.xml  Whisper.xml
presets/presets/Init/: Default Init.xml
presets/presets/Motion/: Motion Sustain Demo.xml
presets/presets/Performance/: No Vibrato.xml  Subtle Vibrato.xml  Wide Vibrato.xml
presets/presets/Style/: Brassy.xml  Flute-like.xml  Synth Lead.xml  Vocal Aah.xml  Vocal Ooh.xml
presets/presets/Tone/: Bright.xml  Dark.xml  Neutral.xml
src/: BreathLeadPlugin.cpp
src/dsp/: BreathLeadDSP.cpp
src/synth/: BreathLeadSynth.cpp
src/voice/: BreathLeadVoice.cpp
(+136 files in other folders)
